@@ -591,6 +591,7 @@ extern u32_t tcp_ticks;
 #if TCP_DEBUG || TCP_INPUT_DEBUG || TCP_OUTPUT_DEBUG
 void tcp_debug_print(struct tcp_hdr *tcphdr);
 void tcp_debug_print_flags(u8_t flags);
+const char* tcp_debug_state_str(enum tcp_state s);
 void tcp_debug_print_state(enum tcp_state s);
 void tcp_debug_print_pcbs(void);
 s16_t tcp_pcbs_sane(void);
